# CeeBee

./: '  .gitIgnore  .main.c.swp  .travis.yml  .vimrc  :w  CMakeLists.txt  CMakeLists.txt.in  Makefile  README.md  \  ]  ceebee  ceebee.output  cmocka-setup.sh  common.h  gba  gmon.out  jumptable_test  main.c  memorydump.txt  mmu_test  notes.md  out.txt  tags  testing
assets/: .title.swp  exit  title
cmocka-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  cmocka-config.cmake  cmocka.pc  compile_commands.json  config.h
cmocka-build/doc/: Makefile  cmake_install.cmake
cmocka-build/example/: Makefile  allocate_module_test  assert_macro_test  assert_module_test  calculator_test  cmake_install.cmake  customer_database_test  key_value_test  product_database_test  simple_test
cmocka-build/example/chef_wrap/: Makefile  cmake_install.cmake  waiter_test_wrap
cmocka-build/example/uptime/: Makefile  cmake_install.cmake  test_uptime  uptime
cmocka-build/include/: Makefile  cmake_install.cmake
cmocka-build/src/: Makefile  cmake_install.cmake  libcmocka.so.0  libcmocka.so.0.5.0
include/ceebee/: common.h  cpu.h  gpu.h  jumptable.h  jumptable_test.h  mmu.h  operations.h  ppu.h
include/lib/: common.c
lib/: buggy.c  buggy.h  common.c  common.h  termColors.h
src/: common.c  cpu.c  cpu.h  gpu.c  jumptable.c  main.c  main.s  mmu.c  operations.c  operations.h  ppu.c
test/: CMakeLists.txt  Makefile  cmocka_test.c  cpu_test.c  jumptable_test.c  main.cpp  mmu_test.c  operations.cpp  operations_tests
(+2 files in other folders)
